Final html formatting

--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-12 jumbotron text-center">
+      <div class="col-md-12 jumbotron text-center" style="background-image: url('https://ychef.files.bbci.co.uk/live/624x351/p02wypk4.jpg')";>
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
+    <p>You should be able to identify the top 10 bacterial species in the volunteers' belly buttons. 
+      If Improbable Beef identifies a species as a candidate to manufacture synthetic beef, the volunteers will be able to identify 
+      whether that species is found in their navel.</p>
+
     <div class="row">
       <div class="col-md-2">
         <div class="well">
@@ -33,14 +37,24 @@
       </div>
       <div class="col-md-5">
         <div id="bar"></div>
+        <p>
+          This bar chart shows the top 10 bacterial species in the individual's belly button. Roll over a bar to check out how each species is labelled!
+        </p>
       </div>
       <div class="col-md-5">
         <div id="gauge"></div>
+        <p>
+          Do you think this person washed their belly button enough? Maybe they need to wash it more often considering how many bacterial cultures were found!
+        </p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
         <div id="bubble"></div>
+        <p>
+          Take a look at all the different cultures found in this person's belly button sample! Based on some of their graphical sizes, they probably need to 
+          scrub their tummies more frequently. Get that bacteria out!!
+        </p>
       </div>
     </div>
   </div>
